[metadata]
name = certwrangler
summary = A centralized ACME cert manager
author = M. David Bennett
description-file = README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
home-page = https://github.com/testeddoughnut/certwrangler
requires-python = >=3.7.0
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Systems Administration

[files]
packages =
    certwrangler

[extras]
development =
    black==22.10.0

[entry_points]
console_scripts =
    certwrangler = certwrangler.shell:main
certwrangler.store =
    local = certwrangler.stores.local:LocalStore
certwrangler.solver =
    lexicon = certwrangler.solvers.lexicon:LexiconSolver
